api: Remove unused `timetable` endpoints
